[gd_scene load_steps=2 format=2]

[ext_resource path="res://MenuCustom.gd" type="Script" id=1]

[node name="Control" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = 262.0
margin_top = 150.0
margin_right = 762.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 300 )
rect_pivot_offset = Vector2( 250, 150 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 500.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SizeX" type="SpinBox" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 164.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( -488, -17 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 1000.0
value = 9.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 332.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "x"
align = 1
valign = 1

[node name="SizeY" type="SpinBox" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 500.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( -488, -17 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 1000.0
value = 9.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 252.0
margin_right = 500.0
margin_bottom = 276.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 143.0
margin_bottom = 19.0
text = "Pourcentage de mines"

[node name="MineSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 147.0
margin_right = 422.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.15

[node name="MinePercentage" type="SpinBox" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 426.0
margin_right = 500.0
margin_bottom = 24.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.15

[node name="ValidateButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 280.0
margin_right = 500.0
margin_bottom = 300.0
text = "Valider"

[connection signal="pressed" from="Panel/VBoxContainer/ValidateButton" to="." method="_on_ValidateButton_pressed"]
